--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,9 @@
-"fastapi[all]"
-"python-jose[cryptography]"
-"passlib[bcrypt]"
+fastapi[all]
+python-jose[cryptography]
+passlib[bcrypt]
+fastapi-sqlalchemy 
+pydantic 
+alembic
+psycopg2
+uvicorn 
+python-dotenv
